# Expenses_server

./: expenses.db  main.py  pyproject.toml  test.py
