[project]
name = "fastmcp-demo-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastmcp>=3.4.4",
]

[tool.fastmcp]
# This tells FastMCP to use uv environment management
# with default settings (no custom path)
environments = ["uv"]

[tool.fastmcp.environments.uv]
python = "3.12"  # This matches your deployment config